@@ -1,3 +1,14 @@
+2012-12-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* exultmenu.cc: Fixing now relevant double-free in menu.
+	* gamewin.cc: Clear the time queue before deleting unused NPCs (just in case).
+	* tqueue.*, objs/animate.*: Fixed leak when loading game while an object is
+	  playing SFX through Object_sfx; using time queue for it as it has the only
+	  reference to the object.
+	* gumps/AudioOptions_gump.cc: Memory leak on two buttons when enabling or
+	  disabling audio.
+	* gumps/VideoOptions_gump.cc: Double delete: set static variables to zero
+	  after freeing them.
+
 2012-12-08	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* Changelog: Previous two entries (what was wrong with me?).
 	* configure.ac: Enabling NxBR scalers by default, as they seem stable enough.
